# services-security-oidc

./: .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
nagare/services/security/: oidc_auth.py
src/nagare/services/security/: oidc_auth.py
