[metadata]
name = nagare-services-security-oidc
author = Net-ng
author_email = alain.poirier@net-ng.com
description = OpenID Connect security service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-security-oidc
    Tracker = https://github.com/nagareproject/services-security-oidc/issues

[options]
zip_safe = False
packages = find
install_requires =
    requests
    python-jwt
    nagare-partial
    nagare-services
    nagare-services-security
    nagare-services-security-oidc-listener
    nagare-renderers-xml

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
